Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -153,7 +153,7 @@ input, select, textarea {
 		}
 
 	h1 {
-		margin-top: 0.1em;
+		margin-bottom: 0.1em;
 	}
 
 	h1 {
